--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  sliding_up_panel: ^0.3.4
-
-
+  audio_recorder:
+  path_provider:
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
