--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,18 @@ dependencies:
   audio_recorder:
   path_provider:
   speech_recognition:
+  mobx:
+  flutter_mobx:
+  shared_preferences:
+
+  
+
     
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  mobx_codegen:
 
 
 # For information on the generic Dart part of this file, see the
@@ -44,7 +52,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/google_button.jpg
+
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
